@@ -8,6 +8,9 @@ Zope Changes
 
     Bugs fixed
 
+      - Collector #2235: ZCatalog.manage_catalogObject was triggering __len__
+        of objects that implement it, like containers.
+
       - Fix yet another resTructuredText glitch, and add tests (test
         backported from 2.9, which was not in fact vulnerable).
 
